# gms-83-dll

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.claude/: settings.json
.claude/agents/: plan-adherence-reviewer.md  stat-registry-cross-validator.md  todo-scanner.md  version-port-verifier.md
.claude/commands/: audit-plan.md  design-task.md  execute-task.md  plan-task.md  port-class.md  review-todos.md  spec-task.md
.claude/hooks/: clang-format-check.sh  skill-activation-prompt.py  skill-activation-prompt.sh
.claude/skills/: skill-rules.json
.github/workflows/: _build.yml  build-snapshot.yml  cmake-single-platform.yml  lint.yml  pull-request.yml  release.yml
bypass/: CMakeLists.txt  app_hooks.cpp  app_hooks.h  bypass_main.cpp  client_exception.cpp  client_exception.h  dllmain.cpp  key_mapped_hooks.cpp  key_mapped_hooks.h  login_hooks.cpp  login_hooks.h  mob_debug_hooks.cpp  mob_debug_hooks.h  security_hooks.cpp  security_hooks.h  socket_hooks.cpp  socket_hooks.h  socket_hooks_internal.h
cmake/: AddEditDll.cmake  CheckMemoryMapKeys.cmake  CommonLib.cmake  GenerateMemoryMap.cmake
cmake/toolchains/: clang-cl-win32.cmake  wsl-eh-forceinclude.h
common/: Additional.h  AllianceData.h  AvatarData.h  AvatarLook.h  BasicStat.h  BulletContainer.h  CActionMan.cpp  CActionMan.h  CAnimationDisplayer.cpp  CAnimationDisplayer.h  CAttrShoe.h  CAvatar.h  CBattleRecordMan.cpp  CBattleRecordMan.h  CBullet.h  CChatBalloon.h  CClientSocket.cpp  CClientSocket.h  CClock.h  CConfig.cpp  CConfig.h  CConnectionNoticeDlg.h  CCtrlButton.cpp  CCtrlButton.h  CCtrlCheckBox.h  CCtrlComboBox.h  CCtrlComboBoxSelect.h  CCtrlEdit.cpp  CCtrlEdit.h  CCtrlScrollBar.h  CCtrlTab.h  CCtrlWnd.h  CDialog.h  CFadeWnd.h  CFadeoutBullet.h  CFuncKeyMappedMan.cpp  CFuncKeyMappedMan.h  CIGCipher.cpp  CIGCipher.h  CIOBufferManipulator.cpp  (+183 more)
common/detours/: README.md
custom-ui-demo/: CMakeLists.txt  README.md  demo.ini  demo_main.cpp  demo_main.h  dllmain.cpp  handlers.cpp
custom-ui-host/: CMakeLists.txt  README.md  custom-ui-host.ini  dllmain.cpp  host_globals.h  host_main.cpp
custom-ui-host/abi/: abi_globals.h  custom_ui_abi.cpp  custom_ui_abi.h
custom-ui-host/docs/: acceptance.md
custom-ui-host/hooks/: debug_hooks.cpp  debug_hooks.h  process_key_hook.cpp  process_key_hook.h  process_packet_hook.cpp  process_packet_hook.h  s_update_hook.cpp  s_update_hook.h  stage_dtor_hook.cpp  stage_dtor_hook.h  stage_restore.h
custom-ui-host/registries/: hotkey_registry.cpp  hotkey_registry.h  packet_registry.cpp  packet_registry.h  window_registry.cpp  window_registry.h
custom-ui-host/runtime/: custom_ui_wnd.cpp  custom_ui_wnd.h  host_config.h  ini_config.cpp  seh_dispatch.h  text_draw.cpp  text_draw.h  ui_dispatch.cpp  ui_dispatch.h  vtable_patch.cpp  vtable_patch.h
docs/: TODO.md  version-porting-workflow.md
docs/playbooks/: version-port-and-freeze-debug.md
docs/tasks/exception-dispatch-cleanup/: design.md  plan.md  report.md  signature-catalog.md
docs/tasks/task-004-code-hygiene/: context.md  design.md  plan.md  prd.md
docs/tasks/task-005-custom-ui-framework/: audit.md  context.md  design.md  hook-design.md  plan.md  prd.md  risks.md  v83_controls.md  v83_cuiwnd_construction.md  v83_cwndman_funckey.md
docs/tasks/task-006-gms-v84-support/: acceptance.md  context.md  design.md  memory-map.md  plan.md  prd.md  risks.md  signature-catalog.md  struct-verification.md
docs/tasks/task-007-socket-connect-fidelity/: build-matrix.md  context.md  design.md  hook-design.md  memory-map.md  plan.md  prd.md
docs/tasks/task-008-gms-v79-support/: acceptance.md  context.md  design.md  memory-map.md  plan.md  prd.md  risks.md  signature-catalog.md  struct-verification.md
docs/tasks/task-009-gms-v72-support/: acceptance.md  audit-v72-clogin.md  audit-v72-cmaploadable.md  audit-v72-secondarystat.md  audit-v72-sizing-summary.md  audit-v72-ui-family.md  audit.md  context.md  design.md  memory-map.md  plan.md  prd.md  risks.md  signature-catalog.md  struct-verification.md
docs/tasks/task-010-gms-v61-support/: audit.md  context.md  design.md  memory-map.md  plan.md  prd.md  risks.md  signature-catalog.md  struct-verification.md  v61_secondarystat_layout.md
docs/tasks/wsl-cross-compile/: README.md  design.md  plan.md
doom-fix/: CMakeLists.txt  dllmain.cpp
enable-minimize/: CMakeLists.txt  dllmain.cpp
high-resolution/: AddyLocations.h  CMakeLists.txt  Client.cpp  Client.h  dllmain.cpp  high-resolution.ini
include/: memory_map.h.in
memory_maps/GMS/: v111_1.cmake  v61_1.cmake  v72_1.cmake  v79_1.cmake  v83_1.cmake  v84_1.cmake  v87_1.cmake  v95_1.cmake
memory_maps/JMS/: v185_1.cmake
no-ad-balloon/: CMakeLists.txt  dllmain.cpp
no-beginner-party-block/: CMakeLists.txt  dllmain.cpp
no-enter-mts-map-restriction/: CMakeLists.txt  dllmain.cpp
no-patcher/: CMakeLists.txt  dllmain.cpp
proxy/: CMakeLists.txt  MapleAPI.cpp  MapleAPI.h  dllmain.cpp  framework.h  ijl15.cpp  pch.h
redirect/: CMakeLists.txt  dllmain.cpp  redirect.ini
scripts/: ida_struct_to_md.py  strip_license_header.py  wsl-build.sh
skip-logo/: CMakeLists.txt  dllmain.cpp
super-tubi/: CMakeLists.txt  dllmain.cpp
tests/: CMakeLists.txt  test_byte_ops.cpp  test_hotkey_registry.cpp  test_packet_registry.cpp  test_parse_ini.cpp  test_window_registry.cpp
transferable-nx/: CMakeLists.txt  dllmain.cpp
window-mode/: CMakeLists.txt  dllmain.cpp
